Bug 723833 - IAccessibleText::setCaretOffset on location or search bar causes focus to jump, r=tbsaunde, marcoz

--HG--
rename : accessible/tests/mochitest/test_text_caret.html => accessible/tests/mochitest/textcaret/test_general.html